--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,12 @@ _TeamCity*
 # Visual Studio code coverage results
 *.coverage
 *.coveragexml
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
 
 # NCrunch
 _NCrunch_*
